# stratum-deps

./: .gitignore  CMakeLists.txt  README.md  components.json  version.json
.github/: CODEOWNERS
.github/workflows/: build-deps.yml
cmake/: FindCython.cmake  UseCython.cmake  abseil-cpp.cmake  c-ares.cmake  cctz.cmake  cxx_standard.cmake  deps.cmake  gflags.cmake  glog.cmake  grpc.cmake  grpc2.patch.in  gtest.cmake  json.cmake  protobuf.cmake  python-bindings.cmake  re2.cmake  zlib.cmake
cmake/patches/: grpc-current.patch.in  grpc-v1.58.1.patch.in  grpc-v1.59.1.patch.in  grpc-v1.59.2.patch.in  grpc-v1.68.0.patch.in  grpc-v1.69.0.patch.in
docs/: building-acc-stratum-deps.md  building-acc-target-deps.md  building-host-deps.md  building-stratum-deps.md  change-history.md  change_history.md  component-history.rst  conf.py  defining-acc-environment.md  how-to-create-a-grpc-patch-file.md  index.rst  make-cross-deps.rst  make-host-deps.rst  transition-guide.md  upgrade-history.rst
postinstall/: CMakeLists.txt
python/: CMakeLists.txt  pyproject.toml  setup.py.in  stratum_bindings.pyx
python/stratum_python/: __init__.py
scripts/: cleanup.sh  components.py  create-presets.sh  custom-grpc.sh  make-cross-deps.sh  make-host-deps.sh  preconfig.sh  prune.sh  recent-grpc.sh  rmgit.sh
scripts/manifest/: manifest.json  manifest.py
